--- a/css/style.css
+++ b/css/style.css
@@ -233,8 +233,8 @@ p {
     .grid-half1r {
         display: grid;
         grid-template-areas: 
-        'HalfLeft' 
-        'HalfRight';
+        'HalfRight'
+        'HalfLeft';
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
     }
