--- a/css/dark.css
+++ b/css/dark.css
@@ -13,13 +13,13 @@
     }
 
     .footer {
-        background-image: url(/../../images/footerdark.svg); /* The image used */
+        background-image: url("/images/footerdark.svg"); /* The image used */
         background-color: #27005E; /* Used if the image is unavailable */
     }
 
     .hero {
-        background-image: url(/../../images/backgroundDark.svg); /* The image used */
+        background-image: url("/images/BackgroundDark.svg"); /* The image used */
         background-color: #27005E; /* Used if the image is unavailable */
     }
-    
+
     }
